[tool.poetry]
name = "chronocli"
version = "0.1.2"
description = ""
authors = ["Ardent Community <arghyasarkar.nolan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
