[tool.poetry]
name = "chronocli"
version = "0.1.0"
description = "The solution submission CLI for the Ardent-Community."
authors = ["Ardent Community <arghyasarkar.nolan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptocode = "^0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
